examples/test/testpolicy12482.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12482
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key10: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value18
          key46: value48
      podSelector:
        matchLabels:
          key22: value26
          key19: value38
          key15: value30
